Final Submission for Week 1 MIU Class

--- a/ayotte_willson_project1/css/style.css
+++ b/ayotte_willson_project1/css/style.css
@@ -1,7 +1,7 @@
 /*Name: Willson Ayotte
-Date: Aug 19th, 2012
+Date: Aug 30th, 2012
 Document: CSS for Apartment Application
-Decription: For VFW 1208
+Decription: For MIU 1209
 */
 
 html {
@@ -18,58 +18,62 @@ body {
     line-height: 20px;
 }
 
+/*Main Headline for Application.*//*First Page.*/
 h1 {
     background: -webkit-gradient(linear, left top, right bottom, from(#0b88cb), to(#004068));
-    color: lightblue;
+    color: white;
     font-size: 145%;/*font size in percent*/
     text-shadow: 2px 2px #000000;
     text-align: center;
     border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
     padding: 10px;/*how much space around text on all sides*/
     margin: -25px -24px 25px -24px; /*(x)top , (x)left , (x)bottom , (x)right*/
     
 }
 
+/*The Browse Apartment Title to the section.*//*First Page.*/
 h2 {
     background: -webkit-gradient(linear, left top, right bottom, from(#0b88cb), to(#004068));
-    color: lightblue;
+    color: white;
     font-size: 125%;/*font size in percent*/
     text-shadow: 2px 2px #000000;
     text-align: center;
     border-radius: 10px;
     padding: 10px;/*how much space around text on all sides*/
-    margin: 20px -0px 25px -5px; /*(x)top , (x)right , (x)bottom , (x)left*/
+    margin: 20px 0px 0px -5px; /*(x)top , (x)right , (x)bottom , (x)left*/
 }
 
-p {
-    color: gold;
-    font-weight: bold;
-    text-align: center;
-}
-
-#p1{
+/*The "What needs fixing?"" text.*//*First Page.*/
+#p1 {
     color:red;
-    font-size: 22px;
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    margin-left: 100px;
     position:relative;
-    left: 33px;
     bottom: 115px;
 }
 
-#search{
-    margin-top: -100px;
+/*The search field.*//*First Page.*/
+#searchBox {
+    width: 230px;
+}
+
+/*The actual seach button.*//*First Page.*/
+#searchBtn {
+    margin-top: -130px;
     margin-bottom: 20px;
+    width: 100px;
     position:relative;
     bottom: -7px;
 }
 
-/*secound page*/
+/*Error messages that show up.*//*secound page*/
 span{
    color: red;
 }
 
-/*secound page*/
+/*The range counter to show the value of the slide bar.*//*secound page*/
 #range { 
   position: center;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#444444), to(#999999));
@@ -80,23 +84,23 @@ span{
   color: white; 
   border-radius: 10px; 
   display: inline-block; 
-  font: bold 15px/30px Georgia;
+  font: bold 15px/30px Lucida Grande;
   bottom: 175%;
   left: 0;
   margin-left: 10px;
 }
 
-/*secound page*/
+/*Main fieldset background*//*secound page*/
 #apartmentFieldset{
     background-color: lightgrey;
     border-radius: 10px;
 
 }
 
-/*secound page*/
+/*Main forum field title section.*//*secound page*/
 legend{
     background: -webkit-gradient(linear, left top, right bottom, from(#0b88cb), to(#004068));
-    color: lightblue;
+    color: white;
     text-align: center;
     font-weight: bold;
     font-size: 15px;
@@ -128,43 +132,43 @@ input {
     width: 200px;
 }
 
-
-
 input:focus, 
 textarea:focus, 
 #date:focus {
 background-color: gold;
 }
 
-/*secound page*/
+/*How wide the drop down menu for what Aparment Type Selection.*//*secound page*/
 #aptType{
     width: 215px;
 }
 
-/*secound page*/
+/*How wide the actual slide bar is.*//*secound page*/
 #condition{
     width: 145px;
 }
 
-/*secound page*/
+/*The text area for the comment box.*//*Secound Page*/
 textarea {
     font-size: 14px;
     width: 210px;
     height: 100px;
 }
 
-
+/*The background to the Data displayed from Local Storage.*//*Third Page.*/
 div {
     background: -webkit-gradient(linear, left top, right bottom, from(white), to(white));
     border-radius: 10px;
     padding-left: 5px;
 }
 
+/*Deviding line between local storage data.*//*Third Page.*/
 div ul {
     border-bottom: solid black 1px;
     /*Play with this<<<<<<<<<<<<<<<<<<<<<<<<<*/
 }
 
+/*The items that are save into Local Storage.*//*Third Page.*/
 #items{
     color: #004068;
 }
@@ -181,20 +185,23 @@ text-shadow: 1px 1px #000000;
 }
 
 div.browseApartments {
-    background :#d3d3d3;
-    width:250px; 
-    height:245px;
+    background:transparent; /* transparent or  #d3d3d3 */
+    margin-left: -24px;
+    width:299px; 
+    height:176px;
 }
 
-/*secound page*/
+/*Error messages when adaquit data is not inserted in form fields.*//*secound page*/
 .errormsg{
     color: red;
 }
 
-#link1{
+/*Add an Apartment Button*//*First Page*/
+#addApt{
     background: -webkit-gradient(linear, center top, center bottom, from(#0b88cb), to(#004068));
     width: 120px;
     height: 35px;
+    margin-left: 115px;
     font-weight: bold;
     font: 40px;
     letter-spacing: 2px;
@@ -207,14 +214,15 @@ div.browseApartments {
     inset 0 -1px 1px rgba(0,0,0,0.5), 
     inset 0 1px 1px rgba(255,255,255,0.8);
     position:relative;
-    left: 100px;
-    bottom: 125px;
+    bottom: 132px;
 }
 
+/*Browse apartment type buttons.*//*First Page.*/
 ul button {
     background: -webkit-gradient(linear, center top, center bottom, from(#0b88cb), to(#004068));
-    /*width: 0px;*/
-    padding: 0px;
+    width: 304px;
+    padding: 5px;
+    margin-left: -45px;
     font-size: 20px;
     font-weight: bold;
     letter-spacing: 2px;
@@ -226,9 +234,6 @@ ul button {
     0 -1px 1px #666, 
     inset 0 -1px 1px rgba(0,0,0,0.5), 
     inset 0 1px 1px rgba(255,255,255,0.8);
-    /*position:relative;
-    left:-38px;
-    bottom:10px;*/
 }
 
 /*Submit the infromation in the data fields.*//*Secound Page.*/
