Got add apartment, save, display, edit, delete to work, JSON works too.

--- a/ayotte_willson_project3/gold/css/style.css
+++ b/ayotte_willson_project3/gold/css/style.css
@@ -4,3 +4,8 @@ Document: CSS for Apartment Application
 Decription: For MIU 1209
 */
 
+label.error{
+	display: block;
+	margin: 10px 0;
+	color:#cc0000;
+}
