Added thumbnail pics to localstorage data

--- a/ayotte_willson_project3/gold/css/style.css
+++ b/ayotte_willson_project3/gold/css/style.css
@@ -19,11 +19,8 @@ ul li {
 }
 
 ul {
-	background-color: lightgrey;
+	background-color: white;
 	border-bottom: solid black 1px;
 	padding: 10px;
 }
 
-#addnew{
-	display: none;
-}
