--- a/ayotte_willson_project4/gold/css/style.css
+++ b/ayotte_willson_project4/gold/css/style.css
@@ -19,11 +19,24 @@ ul li {
 }
 
 ul {
-	background: white;
-	color: black;
+	background: url(background1.png);
+	background-position: left bottom;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+	color: white;
 	padding: 10px;
 	margin-bottom: 30px;
 	margin-top: -10px;
+	font-weight: bold;
+}
+
+ul li button{
+	background: -webkit-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(45,45,45,1) 100%);
+	color: lightgrey;
+	border-radius: 20px;
+	font-size: 12px;
+	width: 130px;
+	height: 25px
 }
 
 #logo{
@@ -34,7 +47,7 @@ ul {
 }
 
 #hbgimg {
-	background: url(city.png);
+	background: url(background1.png);
 	background-position: left bottom;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -43,7 +56,7 @@ ul {
 }
 
 #additem {
-	background: url(city.png);
+	background: url(background1.png);
 	background-position: left bottom;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -51,7 +64,7 @@ ul {
 }
 
 #supera{
-	background: url(city.png);
+	background: url(background1.png);
 	background-position: left bottom;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -59,7 +72,7 @@ ul {
 }
 
 #abouta{
-	background: url(city.png);
+	background: url(background1.png);
 	background-position: left bottom;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -67,7 +80,7 @@ ul {
 }
 
 #vaa{
-	background: url(city.png);
+	background: url(background1.png);
 	background-position: left bottom;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -75,7 +88,7 @@ ul {
 }
 
 #vra{
-	background: url(city.png);
+	background: url(background1.png);
 	background-position: left bottom;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -83,15 +96,23 @@ ul {
 }
 
 #naa{
-	background: url(city.png);
+	background: url(background1.png);
 	background-position: left bottom;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 	color: white;
 }
 
+#foottext{
+	text-align: center;
+	font-weight: bold;
+}
+
 #addfooter{
+	background: black;
 	margin-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 button {
@@ -101,6 +122,5 @@ button {
 	float:left;
 	margin-bottom: 30px;
 	margin-top: 10px;
-	width:120px;
-	height:31px;
+	margin-right: 10px;
 }
